--- a/PITChdesigner/PITChDesigner2_0/contact.html
+++ b/PITChdesigner/PITChDesigner2_0/contact.html
@@ -80,12 +80,12 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Contact Us</h2>
                     <p class="lead">
-                        &ensp;This website is maintained by <a href='http://www.mls.sci.hiroshima-u.ac.jp/smg/index.html'>Molecular Genetics Laboratory, Department of Mathematical and Life Sciences, Graduate School of Science, Hiroshima University, Japan.</a>
+                        &ensp;This website is maintained by <a href='https://smg.hiroshima-u.ac.jp'>Molecular Genetics Laboratory, Graduate School of Integrated Sciences for Life, Hiroshima University, Japan.</a>
                         <br><br> &ensp;We are always happy to hear feedback.<br> &ensp;We can be reached via e-mail:<br> kazukinakamae_Atmark_gmail.com [ _Atmark_ -> @ ]
                     </p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="http://www.mls.sci.hiroshima-u.ac.jp/smg/index.html" target="_blank">
+                    <a href="https://smg.hiroshima-u.ac.jp" target="_blank">
                         <img class="img-responsive" src="images/member2016.jpg" alt="">
                     </a>
                 </div>
@@ -122,9 +122,9 @@
                     <br>
                     <p class=s>
                         <a href='./index.html'>PITCh designer 2.0</a> |
-                        <a href='http://www.mls.sci.hiroshima-u.ac.jp/smg/index.html'>
-                  			Molecular Genetics Laboratory, Department of Mathematical and Life Sciences, Graduate School of Science, Hiroshima University
-                  		</a><br> This page is licensed under a
+                        <a href='https://smg.hiroshima-u.ac.jp'>
+                            Molecular Genetics Laboratory, Graduate School of Integrated Sciences for Life, Hiroshima University
+                        </a><br> This page is licensed under a
                         <a target='_blank' href='http://creativecommons.org/licenses/by/2.1/jp/deed.en'>
                   		Creative Commons Attribution 2.1 Japan License</a>.
                     </p>
