--- a/PITChdesigner/contact.html
+++ b/PITChdesigner/contact.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="PITCh designer 2.0 is a free online tool to design gRNAs & homology arms for marker gene knock-in.">
+    <meta name="description" content="PITCh designer 2.1 is a free online tool to design gRNAs & homology arms for marker gene knock-in.">
     <meta name="author" content="Kazuki Nakamae">
 
 
@@ -54,7 +54,7 @@
                         <a href="./about.html">About</a>
                     </li>
                     <li>
-                        <a href="./index.html">PITCh designer 2.0</a>
+                        <a href="./index.html">PITCh designer 2.1</a>
                     </li>
                     <li>
                         <a href="./contact.html">Contact</a>
@@ -80,12 +80,12 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Contact Us</h2>
                     <p class="lead">
-                        &ensp;This website is maintained by <a href='http://www.mls.sci.hiroshima-u.ac.jp/smg/index.html'>Molecular Genetics Laboratory, Department of Mathematical and Life Sciences, Graduate School of Science, Hiroshima University, Japan.</a>
+                        &ensp;This website is maintained by <a href='https://smg.hiroshima-u.ac.jp'>Molecular Genetics Laboratory, Graduate School of Integrated Sciences for Life, Hiroshima University, Japan.</a>
                         <br><br> &ensp;We are always happy to hear feedback.<br> &ensp;We can be reached via e-mail:<br> kazukinakamae_Atmark_gmail.com [ _Atmark_ -> @ ]
                     </p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="http://www.mls.sci.hiroshima-u.ac.jp/smg/index.html" target="_blank">
+                    <a href="https://smg.hiroshima-u.ac.jp" target="_blank">
                         <img class="img-responsive" src="images/member2016.jpg" alt="">
                     </a>
                 </div>
@@ -110,7 +110,7 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="./index.html">PITCh designer 2.0</a>
+                            <a href="./index.html">PITCh designer 2.1</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
@@ -121,9 +121,9 @@
                     <hr>
                     <br>
                     <p class=s>
-                        <a href='./index.html'>PITCh designer 2.0</a> |
-                        <a href='http://www.mls.sci.hiroshima-u.ac.jp/smg/index.html'>
-                  			Molecular Genetics Laboratory, Department of Mathematical and Life Sciences, Graduate School of Science, Hiroshima University
+                        <a href='./index.html'>PITCh designer 2.1</a> |
+                        <a href='https://smg.hiroshima-u.ac.jp'>
+                  			Molecular Genetics Laboratory, Graduate School of Integrated Sciences for Life, Hiroshima University
                   		</a><br> This page is licensed under a
                         <a target='_blank' href='http://creativecommons.org/licenses/by/2.1/jp/deed.en'>
                   		Creative Commons Attribution 2.1 Japan License</a>.
