--- a/PITChdesigner/index.html
+++ b/PITChdesigner/index.html
@@ -129,7 +129,7 @@
         <div class="container">
             <h5>Visit the old version of PITCh designer:<br>
                 <a href="http://www.mls.sci.hiroshima-u.ac.jp/smg/PITChdesignerv1/index.html" target="_blank">version 1.0</a><br>
-                <a href="./PITChDesigner2_0/index.html" target="_blank">version 2.0</a>
+                <a href="./PITChDesigner2_0/index.html" target="_blank">version 2.1</a>
             </h5>
             <h5>*We do not recommend using Internet Explorer to use PITCh designer 2.1.</h5>
         </div>
@@ -448,9 +448,8 @@ tggacgagctgtacaagtaa
                             <br>
                             <p class=s>
                                 <a href='.'>PITCh designer</a> |
-                                <a href='http://www.mls.sci.hiroshima-u.ac.jp/smg/index.html'>
-											Molecular Genetics Laboratory, Department of Mathematical and Life Sciences, Graduate School of Science, Hiroshima University
-										</a><br> This page is licensed under a
+                                <a href='https://smg.hiroshima-u.ac.jp'>
+                                    Molecular Genetics Laboratory, Graduate School of Integrated Sciences for Life, Hiroshima University, Japan										</a><br> This page is licensed under a
                                 <a target='_blank' href='http://creativecommons.org/licenses/by/2.1/jp/deed.en'>
 										Creative Commons Attribution 2.1 Japan License</a>.
                             </p>
