--- a/PITChdesigner/PITChDesigner2_0/index.html
+++ b/PITChdesigner/PITChDesigner2_0/index.html
@@ -443,9 +443,9 @@ tggacgagctgtacaagtaa
                             <br>
                             <p class=s>
                                 <a href='.'>PITCh designer</a> |
-                                <a href='http://www.mls.sci.hiroshima-u.ac.jp/smg/index.html'>
-											Molecular Genetics Laboratory, Department of Mathematical and Life Sciences, Graduate School of Science, Hiroshima University
-										</a><br> This page is licensed under a
+                                <a href='https://smg.hiroshima-u.ac.jp'>
+                                    Molecular Genetics Laboratory, Graduate School of Integrated Sciences for Life, Hiroshima University, Japan
+                                        </a><br> This page is licensed under a
                                 <a target='_blank' href='http://creativecommons.org/licenses/by/2.1/jp/deed.en'>
 										Creative Commons Attribution 2.1 Japan License</a>.
                             </p>
